# bicepx

./: Cargo.toml  README.md  RESEARCH.md
.github/workflows/: ci.yml
src/: az.rs  azure.rs  bicep.rs  cli.rs  config.rs  console.rs  main.rs  model.rs  project.rs
src/az/: bicep.rs  mod.rs
src/azure/: bicep.rs
src/bicep/: mod.rs
src/command/: build.rs  docs.rs  init.rs  list.rs  mod.rs  show.rs
src/commands/: init.rs  module.rs
src/config/: json.rs  mod.rs  module.rs  root.rs
src/model/: module.rs  project.rs
src/util/: path.rs
