[package]
name = "bicepx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive", "env"] }
derive = "1.0.0"
env_logger = "0.11.8"
log = { version = "0.4.29", features = ["serde"] }
regex = "1.12.2"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.11"
walkdir = "2.5.0"
